fixed logo size height issue on small mobiles

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,6 +41,10 @@ header {
   margin-bottom: 80px;
 }
 
+header img {
+  max-height: 80px;
+}
+
 h1 {
   font-size: 30px;
   font-weight: var(--heading-font-weight);
