--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -42,6 +42,10 @@ header {
   margin-bottom: 80px;
 }
 
+header img {
+  max-height: 80px;
+}
+
 h1 {
   font-size: 30px;
   font-weight: 700;
